[package]
name = "jumpy"
version = "0.1.0"
authors = ["Michael Schroder <thormme@yahoo.com>"]

[dependencies]
piston = "0.36.0"
pistoncore-sdl2_window = "0.49.1"
piston_window = "0.77.0"
piston2d-graphics = "0.26.0"
piston2d-opengl_graphics = "0.52.0"
pistoncore-glutin_window = "0.45.1"
find_folder = "0.3.0"
tiled = "0.7.3"
nalgebra = "0.14.1"
snowflake = "1.3.0"
evmap = "2.0.2"
multi_mut = "0.1.3"
serde = "1.0.34"
serde_derive = "1.0.34"
serde_json = "1.0.13"
splitmut = "0.2.1"

[target.'cfg(target_os = "emscripten")'.dependencies]
emscripten-sys = "0.3.2"
